# gtfo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  pylint.rc  setup.cfg
common/: CMakeLists.txt  README.md
common/include/: common.h
common/include/common/: annotations.h  definitions.h  logger.h  sized_buffer.h  strategy_state.h  types.h  yaml_deserializer.h  yaml_helper.h  yaml_serializer.h
common/include/intel_pt/: pt_cpu.h  pt_cpuid.h  pt_version.h
common/src/: dictionary.c  logger.c  sized_buffer.c  yaml_decoder.c  yaml_helper.c
common/src/intel_pt/: fastdecode.c  pt_cpu.c  pt_cpuid.c  ptxed.c
docs/: Dockerfile  (+1 more)
ooze/: CMakeLists.txt  README.md
ooze/include/: ooze.h
ooze/strategies/include/: afl.h  afl_arith.h  afl_bit_flip.h  afl_config.h  afl_dictionary.h  afl_dictionary_insert.h  afl_dictionary_overwrite.h  afl_havoc.h  afl_interesting.h  det_bit_flip.h  det_byte_add.h  det_byte_arith.h  det_byte_dec.h  det_byte_drop.h  det_byte_flip.h  det_byte_inc.h  det_byte_ins.h  det_byte_interesting.h  det_byte_subtract.h  det_four_bit_flip.h  det_four_byte_arith_be.h  det_four_byte_arith_le.h  det_four_byte_dec_be.h  det_four_byte_dec_le.h  det_four_byte_drop.h  det_four_byte_flip.h  det_four_byte_inc_be.h  det_four_byte_inc_le.h  det_four_byte_ins.h  det_four_byte_interesting_be.h  det_four_byte_interesting_le.h  det_two_bit_flip.h  det_two_byte_arith_be.h  det_two_byte_arith_le.h  det_two_byte_dec_be.h  det_two_byte_dec_le.h  det_two_byte_drop.h  det_two_byte_flip.h  det_two_byte_inc_be.h  det_two_byte_inc_le.h  (+13 more)
ooze/strategies/src/: afl.c  dictionary.c  prng.c  strategy.c
ooze/strategies/src/mutations/: mutate.c
ooze/strategies/src/strategies/afl_arith/: CMakeLists.txt  afl_arith.c
ooze/strategies/src/strategies/afl_bit_flip/: CMakeLists.txt  afl_bit_flip.c
ooze/strategies/src/strategies/afl_dictionary/: CMakeLists.txt  afl_dictionary.c
ooze/strategies/src/strategies/afl_dictionary_insert/: CMakeLists.txt  afl_dictionary_insert.c
ooze/strategies/src/strategies/afl_dictionary_overwrite/: CMakeLists.txt  afl_dictionary_overwrite.c
ooze/strategies/src/strategies/afl_havoc/: CMakeLists.txt  afl_havoc.c
ooze/strategies/src/strategies/afl_interesting/: CMakeLists.txt  afl_interesting.c
ooze/strategies/src/strategies/det_bit_flip/: CMakeLists.txt  det_bit_flip.c
ooze/strategies/src/strategies/det_byte_add/: CMakeLists.txt  det_byte_add.c
ooze/strategies/src/strategies/det_byte_arith/: CMakeLists.txt  det_byte_arith.c
ooze/strategies/src/strategies/det_byte_dec/: CMakeLists.txt  det_byte_dec.c
ooze/strategies/src/strategies/det_byte_drop/: CMakeLists.txt  det_byte_drop.c
ooze/strategies/src/strategies/det_byte_flip/: CMakeLists.txt  det_byte_flip.c
ooze/strategies/src/strategies/det_byte_inc/: CMakeLists.txt  det_byte_inc.c
ooze/strategies/src/strategies/det_byte_ins/: CMakeLists.txt  det_byte_ins.c
ooze/strategies/src/strategies/det_byte_interesting/: CMakeLists.txt  det_byte_interesting.c
ooze/strategies/src/strategies/det_byte_subtract/: CMakeLists.txt  det_byte_subtract.c
ooze/strategies/src/strategies/det_four_bit_flip/: CMakeLists.txt  det_four_bit_flip.c
ooze/strategies/src/strategies/det_four_byte_arith_be/: CMakeLists.txt  det_four_byte_arith_be.c
ooze/strategies/src/strategies/det_four_byte_arith_le/: CMakeLists.txt  det_four_byte_arith_le.c
ooze/strategies/src/strategies/det_four_byte_dec_be/: CMakeLists.txt  det_four_byte_dec_be.c
ooze/strategies/src/strategies/det_four_byte_dec_le/: CMakeLists.txt  det_four_byte_dec_le.c
ooze/strategies/src/strategies/det_four_byte_drop/: CMakeLists.txt  det_four_byte_drop.c
ooze/strategies/src/strategies/det_four_byte_flip/: CMakeLists.txt  det_four_byte_flip.c
ooze/strategies/src/strategies/det_four_byte_inc_be/: CMakeLists.txt  det_four_byte_inc_be.c
ooze/strategies/src/strategies/det_four_byte_inc_le/: CMakeLists.txt  det_four_byte_inc_le.c
ooze/strategies/src/strategies/det_four_byte_ins/: CMakeLists.txt  det_four_byte_ins.c
ooze/strategies/src/strategies/det_four_byte_interesting_be/: CMakeLists.txt  det_four_byte_interesting_be.c
ooze/strategies/src/strategies/det_four_byte_interesting_le/: CMakeLists.txt  det_four_byte_interesting_le.c
ooze/strategies/src/strategies/det_two_bit_flip/: CMakeLists.txt  det_two_bit_flip.c
ooze/strategies/src/strategies/det_two_byte_arith_be/: CMakeLists.txt  det_two_byte_arith_be.c
testing/tap_tester/: CMakeLists.txt  README.md
testing/tap_tester/analysis/src/: analysis.c
testing/tap_tester/jig/src/: jig.c
testing/tap_tester/nocturne/include/: breakpoint_single_step_tap.h  build_test_vm.h  dummy_plugin.h  intel_pt_tap.h  kvm_engine_tap.h  kvm_vcpu_pt_tap.h  kvm_vcpu_record_tap.h  kvm_vcpu_snapshot_tap.h  kvm_vcpu_tap.h  kvm_vm_record_tap.h  kvm_vm_serialization_tap.h  kvm_vm_snapshot_tap.h  kvm_vm_tap.h  nocturne_tap.h  nocturne_tap_helper.h
testing/tap_tester/nocturne/src/: breakpoint_single_step_tap.c  build_test_vm.c  dummy2_plugin.c  dummy_plugin.c  intel_pt_tap.c  kvm_engine_tap.c  kvm_vcpu_pt_tap.c  kvm_vcpu_record_tap.c  kvm_vcpu_snapshot_tap.c  kvm_vcpu_tap.c  kvm_vm_record_tap.c  kvm_vm_serialization_tap.c  kvm_vm_snapshot_tap.c  kvm_vm_tap.c  main.c  nocturne_tap.c
testing/tap_tester/nocturne/testfiles/: intel_pt_execution_multi_expected_packet_decode.txt  intel_pt_execution_one_expected_packet_decode.txt
testing/tap_tester/ooze/src/: ooze.c
testing/tap_tester/tap/include/: tap.h
testing/tap_tester/tap/src/: tap.c
testing/tap_tester/testfile/include/: testfile.h
testing/tap_tester/testfile/src/: testfile.c
the_fuzz/: .clang-format  .gitignore  CMakeLists.txt  README.md
the_fuzz/components/analysis/include/: analysis.h  analysis_auto.h  analysis_common.h
the_fuzz/components/analysis/src/: afl_auto_analysis.c  afl_bitmap_analysis.c  analysis_common.c  demo_analysis.c  falk_filter_analysis.c  pt_hash_analysis.c
the_fuzz/components/jig/include/: jig.h
the_fuzz/components/jig/src/: afl_jig.c  dummy_jig.c
the_fuzz/components/the_fuzz/: the_fuzz.c
(+579 files in other folders)
